--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </main>
     
     <footer>
-        <p>Site criado por <a href="https://github.com/riqie" class="externo" target="_blank">Henrique</a>.</p>
+        <p>Site criado por <a href="https://github.com/henriquecarvalhodeandrade" class="externo" target="_blank">Henrique</a>.</p>
     </footer>
 </body>
 </html>
